[tool.poetry]
name = "asyncio-playground"
version = "0.1.0"
description = ""
authors = ["Javi Aparicio <apariciogarcia.j@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
